# quantai-dashboard

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  API_REFERENCE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Makefile  PRODUCTION_FEATURES.md  Plan  QUICKSTART.md  README.md  TECHNICAL_PORTFOLIO.md  TROUBLESHOOTING.md  USER_GUIDE.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  plan.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 472b89c33366_initial_schema_with_ohlcv_features_.py
examples/distressed/: COMPARATIVE_ANALYSIS.md  PRODUCTION_READINESS.md  README.md  VALIDATION_METHODOLOGY.md  VALIDATION_SUMMARY.md  __init__.py  agents.py  ati_2023.py  ati_2023_memo.md  credit_tools.py  demo.py  envision_2023.py  envision_2023_memo.md  mock_mode.py  models.py
notebooks/: backtest_analysis.py  example_api_usage.py
scripts/: run_ablation.py  run_backtest.py  seed_data.py  train_model.py
src/: config.py  logging_config.py
src/advisor/: allocation.py  optimizer.py  rebalancing.py  recommendations.py  risk_profile.py  sip.py
src/agents/: __init__.py  base_agent.py  news_agent.py  orchestrator.py  quant_agent.py  risk_agent.py
src/analysis/: drawdown_analysis.py  performance.py  performance_report.py  regime.py  sector.py
src/analytics/: tracking.py
tests/: conftest.py  test_ablation.py  test_agents.py  test_distressed_credit.py  test_envision_2023.py  test_live_feed.py  test_regime.py  test_shap_api.py  test_slippage.py  test_stress_test.py
(+174 files in other folders)
