[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantai-dashboard"
version = "0.1.0"
description = "Real-time ML trading dashboard with backtesting and paper trading"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "yfinance>=0.2.36",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.3.0",
    "pyportfolioopt>=1.5.0",
    "optuna>=3.5.0",
    "torch>=2.2.0",
    "sqlalchemy>=2.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "dash>=2.15.0",
    "plotly>=5.18.0",
    "redis>=5.0.0",
    "a2wsgi>=1.10.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "joblib>=1.3.0",
    "websockets>=12.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
